# C-Sandbox

./: .gitignore  README.md  dockerfile  lang.h  main.c  main.py  makefile  rule.h  sandbox.c
.github/workflows/: build.yaml
submission/: main.cpp
test/e2e/: pyproject.toml  run.py  test_foo.py
test/e2e/testdata/python-c-lib-call/src/: main.py
