[tool.poetry]
name = "noj-sandbox-e2e-test"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "noj_sandbox_e2e_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
